# perception-spartan

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  CalibInfo.hpp  Config.hpp  Dummy.cpp  Dummy.hpp  ImageLoader.cpp  ImageLoader.hpp  Main.cpp  MappingExecutor.cpp  MappingExecutor.hpp  OdometryExecutor.cpp  OdometryExecutor.hpp  SpartanMap.cpp  SpartanMap.hpp
test/: CMakeLists.txt  test_Dummy.cpp
